revamp notifications
